// Code generated by @qninhdt/typespec-orm. DO NOT EDIT.
// Source: https://github.com/qninhdt/typespec-libraries

package schema

import (
	"entgo.io/ent"
	"entgo.io/ent/dialect"
	"entgo.io/ent/dialect/entsql"
	"entgo.io/ent/schema/edge"
	"entgo.io/ent/schema/field"
	"entgo.io/ent/schema/index"
	"github.com/google/uuid"
	"github.com/shopspring/decimal"

	entschema "entgo.io/ent/schema"
)

// Subscription Subscription record for feature access and billing.
type Subscription struct {
	ent.Schema
}

func (Subscription) Annotations() []entschema.Annotation {
	return []entschema.Annotation{
		entsql.Annotation{Table: "subscriptions", Checks: map[string]string{"subscriptions_monthly_price_non_negative": "monthlyPrice >= 0"}},
		entsql.WithComments(true),
	}
}

func (Subscription) Mixin() []ent.Mixin {
	return []ent.Mixin{
		Timestamped{},
	}
}

func (Subscription) Fields() []ent.Field {
	return []ent.Field{
		field.Enum("plan").Values("free", "basic", "premium", "enterprise").
			Comment("Selected plan tier."),
		field.Other("monthly_price", decimal.Decimal{}).
			SchemaType(map[string]string{dialect.Postgres: "numeric(10,2)"}).
			Comment("Monthly price stored as NUMERIC(10,2) to avoid floating-point drift."),
		field.Time("start_date").
			Comment("Start date of the billing period."),
		field.Time("end_date").
			Comment("Optional end date - null means the subscription is open-ended.").
			Optional().
			Nillable(),
		field.Bool("is_active").
			Default(true).
			Comment("Fast boolean used by feature gates and entitlement checks."),
		field.UUID("user_id", uuid.UUID{}),
	}
}

func (Subscription) Edges() []ent.Edge {
	return []ent.Edge{
		edge.From("user", User.Type).
			Ref("subscriptions").
			Field("user_id").
			Unique().
			Required().
			Annotations(entsql.OnDelete(entsql.Cascade)),
	}
}

func (Subscription) Indexes() []ent.Index {
	return []ent.Index{
		index.Fields("plan"),
		index.Fields("user_id", "is_active"),
	}
}
