// Code generated by @qninhdt/typespec-orm. DO NOT EDIT.
// Source: https://github.com/qninhdt/typespec-libraries

package schema

import (
	"entgo.io/ent"
	"entgo.io/ent/dialect/entsql"
	"entgo.io/ent/schema/edge"
	"entgo.io/ent/schema/field"
	"entgo.io/ent/schema/index"
	"github.com/google/uuid"

	entschema "entgo.io/ent/schema"
)

// World A player-created world that owns story trees and reusable content pools.
type World struct {
	ent.Schema
}

func (World) Annotations() []entschema.Annotation {
	return []entschema.Annotation{
		entsql.Annotation{Table: "worlds"},
		entsql.WithComments(true),
	}
}

func (World) Mixin() []ent.Mixin {
	return []ent.Mixin{
		Timestamped{},
	}
}

func (World) Fields() []ent.Field {
	return []ent.Field{
		field.String("name").
			MaxLen(200).
			Comment("Display name of the world. Referenced by forms and collaboration models through lookup types."),
		field.String("slug").
			MaxLen(80).
			Comment("Stable human-readable slug used by cross-namespace references.").
			Unique(),
		field.Text("prompt").
			Comment("System prompt used to guide AI generation within the world."),
		field.Enum("visibility").Values("private", "unlisted", "public").
			Default("private").
			Comment("Who can discover and join this world."),
		field.Enum("safety_rating").Values("general", "teen", "mature").
			Default("teen").
			Comment("Content safety classification for moderation and parental controls."),
		field.JSON("settings", map[string]any{}).
			Comment("Optional JSON settings payload for custom generation behavior.").
			Optional(),
		field.UUID("owner_id", uuid.UUID{}),
	}
}

func (World) Edges() []ent.Edge {
	return []ent.Edge{
		edge.To("owner", User.Type).
			Field("owner_id").
			Unique().
			Required().
			Annotations(entsql.OnDelete(entsql.Cascade)),
	}
}

func (World) Indexes() []ent.Index {
	return []ent.Index{
		index.Fields("name"),
		index.Fields("visibility"),
		index.Fields("safety_rating"),
		index.Fields("owner_id"),
		index.Fields("owner_id", "created_at"),
		index.Fields("visibility", "deleted_at"),
	}
}
